--- a/tube_application/WebContent/login.html
+++ b/tube_application/WebContent/login.html
@@ -25,7 +25,7 @@
 					</div>
 
 					<div class="signin-form">
-						<h2 class="form-title">Sign up</h2>
+						<h2 class="form-title">Sign In</h2>
 						<form method="POST" class="register-form" id="login-form">
 							<div class="form-group">
 								<label for="your_name"><i
@@ -46,7 +46,7 @@
 							</div>
 							<div class="form-group form-button">
 								<input type="submit" name="signin" id="signin"
-									class="form-submit" value="Log in" />
+									class="form-submit" value="Log in" onclick="validateUser()" />
 							</div>
 						</form>
 					</div>
@@ -57,5 +57,6 @@
 	<!-- JS -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/services/loginService.js"></script>
 </body>
 </html>
